syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "DescriptionProvider";

package description;

service Description{
	rpc GetText (TextRequest) returns (TextReply);
	rpc GetTextSets (google.protobuf.Empty) returns (TextSetsReply);
	rpc GetTextSetsStream (google.protobuf.Empty) returns (stream TextSetReply);
	rpc AddTextSet (AddTextSetRequest) returns (TextSetReply);
	rpc DeleteTextSet (DeleteTextSetRequest) returns (google.protobuf.Empty);
}

message TextRequest{
	google.protobuf.Int32Value wordsLimit = 1;
	google.protobuf.Int32Value textSetId = 2;
}

message TextReply{
	string text = 1;
}

message AddTextSetRequest{
	string name = 1;
	string text = 2;
}

message DeleteTextSetRequest{
	int32 textSetId = 1;
}

message TextSetReply{
	int32 id = 1;
	string name = 2;
	string text =  3;
}

message TextSetsReply{
	repeated TextSetReply textSets = 1;
}

